<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="40dp"
    android:paddingTop="30dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Merchant Name"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:id="@+id/txtMerchantName"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="40sp"
                android:layout_marginTop="13dp"
                android:id="@+id/txtTransactionAmount"/>

        </LinearLayout>

        <TextView
            android:text="Aug 3, 2017 @ 2:15pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDate"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:textColor="@color/link"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textAlignment="center"
        android:text="Mobile Money Transfer to Mobile Money Account Number"
        android:id="@+id/txtDescription"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_fee"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:id="@+id/txtFee"
        android:layout_gravity="center"
        android:textColor="@color/danger"/>


    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="PROCESSING..."
        android:textAllCaps="true"
        android:textSize="15sp" />

</LinearLayout>
