<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cashmos.cashmos.DashboardActivity">

    <!-- Account Name -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_alignParentStart="true"
        android:id="@+id/account_name_container"
        android:background="@color/title"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAccountName"
            android:textSize="17sp"
            android:textColor="@color/link"
            tools:text="ACCOUNTS"
            android:fontFamily="sans-serif-condensed"
            android:drawableStart="@drawable/ic_work_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <!-- Account Balance -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_name_container"
        android:id="@+id/txtAccountBalance"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="40sp"
                android:layout_marginTop="13dp"
                android:id="@+id/txtAvailableBalance"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textSize="12sp"
                android:textColor="@color/link"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txtAccountBalance"
        android:id="@+id/actions"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MAKE TRANSFER"
                android:width="175dp"
                android:drawableStart="@drawable/ic_reply_black_24dp"
                android:id="@+id/btnMakeTransfer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD MONEY"
                android:width="175dp"
                android:id="@+id/btnAddMoney"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Transactions -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/actions"
        android:layout_alignParentStart="true"
        android:id="@+id/transactions_container"
        android:background="@color/title"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="60dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTransactionsTitle"
            android:text="@string/title_transactions"
            android:textSize="17sp"
            android:textColor="@color/link"
            android:fontFamily="sans-serif-condensed"
            android:drawableStart="@drawable/ic_schedule_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transactions_container">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_transactions"
            android:visibility="visible"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lstTransactions"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>



</RelativeLayout>