<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_dashboard"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.cashmos.cashmos.DashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="50dp"
        android:id="@+id/welcome_container"
        android:paddingLeft="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtWelcome"
            android:text="@string/welcome"
            android:textSize="18sp"
            android:textColor="@color/link"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif-condensed" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/welcome_container"
        android:layout_alignParentStart="true"
        android:id="@+id/accounts_title"
        android:background="@color/title"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAccountsTitle"
            android:text="@string/title_accounts"
            android:textSize="17sp"
            android:textColor="@color/link"
            tools:text="ACCOUNTS"
            android:fontFamily="sans-serif-condensed"
            android:drawableStart="@drawable/ic_work_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accounts_title"
        android:id="@+id/accounts_container">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_accounts"
            android:visibility="visible"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lstAccounts"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/accounts_container"
        android:layout_alignParentStart="true"
        android:id="@+id/transactions_container"
        android:background="@color/title"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="60dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTransactionsTitle"
            android:text="@string/title_recent_transactions"
            android:textSize="17sp"
            android:textColor="@color/link"
            android:fontFamily="sans-serif-condensed"
            android:drawableStart="@drawable/ic_schedule_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transactions_container">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_transactions"
            android:visibility="visible"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lstTransactions"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>



</RelativeLayout>